--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -1,6 +1,3 @@
 .create-form {
-    /* margin-left: 30rem;
-    margin-right: 30rem; */
-    margin-bottom: 20px;
-    padding-bottom: 2rem;
-  }
+  max-width: 600px;
+}
